--- a/web/whitelist.html
+++ b/web/whitelist.html
@@ -1,111 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Spotify Monitor</title>
-<style>
-body { font-family: sans-serif; margin: 40px; }
-h1 { margin-bottom: 20px; }
-.album-grid { display: flex; flex-wrap: wrap; gap: 20px; margin-top: 20px; }
-.album { width: 200px; text-align: center; }
-.album img { width: 180px; height: 180px; object-fit: cover; }
-.field-wrapper { display: flex; gap: 10px; margin-bottom: 5px; }
-input, button { font-size: 1em; padding: 5px; }
-</style>
+  <meta charset="UTF-8">
+  <title>Spotify Monitor</title>
+  <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
 
-<h1>Spotify Monitor - Known Releases</h1>
+<h1>Spotify Monitor – Known Releases</h1>
 
-<!-- Dynamic album list -->
+<!-- Album grid -->
 <div class="album-grid" id="albums"></div>
 
-<!-- Manual whitelist management -->
+<hr>
+
+<!-- Add albums -->
 <h2>Add Albums to Whitelist</h2>
+
 <div id="fields-container">
   <div class="field-wrapper">
     <input type="text" placeholder="Enter album ID" class="album-field">
     <button type="button" onclick="addField()">+</button>
   </div>
 </div>
-<button onclick="submitAlbums()">Submit</button>
+
+<button class="primary" onclick="submitAlbums()">Submit</button>
 
 <div id="results"></div>
 
 <script>
-// Fetch known albums from API and display
 async function loadAlbums() {
-    const container = document.getElementById("albums");
-    container.innerHTML = "";
-    const res = await fetch("/api/list_known");
-    const albums = await res.json();
+  const container = document.getElementById("albums");
+  container.innerHTML = "";
 
-    albums.forEach(a => {
-        const div = document.createElement("div");
-        div.className = "album";
-        div.innerHTML = `
-            <img src="${a.image}" alt="${a.name}">
-            <div><strong>${a.name}</strong></div>
-            <div><small>${a.release_date}</small></div>
-            <div><a href="${a.spotify_url}" target="_blank">Listen</a></div>
-        `;
-        container.appendChild(div);
-    });
+  const res = await fetch("/api/list_known");
+  const albums = await res.json();
+
+  albums.forEach(a => {
+    const div = document.createElement("div");
+    div.className = "album";
+    div.innerHTML = `
+      <img src="${a.image}" alt="${a.name}">
+      <strong>${a.name}</strong>
+      <small>${a.release_date}</small>
+      <a href="${a.spotify_url}" target="_blank">Listen</a>
+      <button class="delete-btn" onclick="deleteAlbum('${a.id}')">🗑 Delete</button>
+    `;
+    container.appendChild(div);
+  });
 }
 
-// Dynamic fields
 function addField() {
-    const container = document.getElementById("fields-container");
-    const wrapper = document.createElement("div");
-    wrapper.className = "field-wrapper";
+  const container = document.getElementById("fields-container");
+  const wrapper = document.createElement("div");
+  wrapper.className = "field-wrapper";
 
-    const input = document.createElement("input");
-    input.type = "text";
-    input.placeholder = "Enter album ID";
-    input.className = "album-field";
+  wrapper.innerHTML = `
+    <input type="text" placeholder="Enter album ID" class="album-field">
+    <button type="button" onclick="this.parentElement.remove()">−</button>
+  `;
 
-    const removeBtn = document.createElement("button");
-    removeBtn.type = "button";
-    removeBtn.textContent = "−";
-    removeBtn.onclick = () => wrapper.remove();
-
-    wrapper.appendChild(input);
-    wrapper.appendChild(removeBtn);
-    container.appendChild(wrapper);
+  container.appendChild(wrapper);
 }
 
-// Submit new albums to add_known API
 async function submitAlbums() {
-    const resultsDiv = document.getElementById("results");
-    resultsDiv.innerHTML = "";
+  const results = document.getElementById("results");
+  results.innerHTML = "";
 
-    const inputs = document.querySelectorAll(".album-field");
-    const ids = Array.from(inputs).map(i => i.value.trim()).filter(Boolean);
+  const ids = Array.from(document.querySelectorAll(".album-field"))
+    .map(i => i.value.trim())
+    .filter(Boolean);
 
-    if (!ids.length) return;
+  if (!ids.length) return;
 
-    try {
-        const res = await fetch('/api/add_known', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ album_ids: ids })
-        });
-        const data = await res.json();
-        if (res.ok) {
-            resultsDiv.innerHTML = `<p style="color:green;">✅ ${data.message}</p>`;
-            data.albums.forEach(a => resultsDiv.innerHTML += `<p>${a}</p>`);
-        } else {
-            resultsDiv.innerHTML = `<p style="color:red;">❌ ${data.error}</p>`;
-        }
-    } catch (e) {
-        resultsDiv.innerHTML = `<p style="color:red;">❌ Error: ${e}</p>`;
-    }
+  const res = await fetch("/api/add_known", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ album_ids: ids })
+  });
 
-    loadAlbums(); // refresh album list after adding
+  const data = await res.json();
+
+  if (res.ok) {
+    results.innerHTML = `<p class="success">${data.message}</p>`;
+  } else {
+    results.innerHTML = `<p class="error">${data.error}</p>`;
+  }
+
+  loadAlbums();
 }
 
-// Initial load
+async function deleteAlbum(id) {
+  if (!confirm("Remove this album from known releases?")) return;
+
+  await fetch("/api/delete_known", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ album_ids: [id] })
+  });
+
+  loadAlbums();
+}
+
 loadAlbums();
 </script>
+
 </body>
 </html>
