--- a/web/whitelist.html
+++ b/web/whitelist.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Spotify Monitor</title>
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="web/styles.css">
 </head>
 <body>
 
