compatible vercel.json

--- a/web/whitelist.html
+++ b/web/whitelist.html
@@ -30,6 +30,27 @@
 <button class="primary" onclick="submitAlbums()">Submit</button>
 
 <div id="results"></div>
+<hr>
+<h2>Spotify Artist Links</h2>
+
+<div class="links">
+  <a
+    href="https://artists.spotify.com/c/artist/69eRfY40RjSFrZOToECdiS/home"
+    target="_blank"
+    rel="noopener"
+  >
+    Ayan Das
+  </a>
+
+  <a
+    href="https://artists.spotify.com/c/content-mismatch"
+    target="_blank"
+    rel="noopener"
+  >
+    Report Wrong Content
+  </a>
+</div>
+
 
 <script>
 async function loadAlbums() {
