--- a/web/whitelist.html
+++ b/web/whitelist.html
@@ -46,15 +46,10 @@
 
     <div id="fields-container">
       <div class="field-wrapper">
-        <input
-          type="text"
-          placeholder="Spotify album ID"
-          class="album-field"
-        />
+        <input type="text" placeholder="Spotify album ID" class="album-field"/>
         <button type="button" onclick="addField()">+</button>
       </div>
     </div>
-
     <button class="primary" onclick="submitAlbums()">Submit</button>
     <div id="results"></div>
   </section>
