--- a/web/whitelist.html
+++ b/web/whitelist.html
@@ -105,7 +105,7 @@ function addField() {
   wrapper.className = "field-wrapper";
 
   wrapper.innerHTML = `
-    <input type="text" placeholder="Enter album ID" class="album-field">
+    <input type="text" placeholder="Spotify album ID" class="album-field">
     <button type="button" onclick="this.parentElement.remove()">−</button>
   `;
 
