--- a/web/whitelist.html
+++ b/web/whitelist.html
@@ -25,8 +25,8 @@
 
   <!-- Check Now / Unrecognized -->
   <section class="card">
-    <div style="display:flex; align-items:center; justify-content:space-between; gap:16px;">
-      <h2 style="margin:0;">Unrecognized Releases</h2>
+    <div class="card-header">
+      <h2>Unrecognized Releases</h2>
       <button class="primary" onclick="checkNow()">Check Now</button>
     </div>
 
